--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/home/home-index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/home/home-index.html
@@ -5,4 +5,16 @@
 	<eits-vbox vertical-align="center" horizontal-align="center">
 		<h1>{{::'welcome' | translate}}</h1>
 	</eits-vbox>
+	
+	<eits-paper-sheet id="information" ng-init="openPaper('information')">
+	            <content-closed>
+	                <eits-vbox padding-left="30" padding-right="30" padding-top="5">
+	                    <h3>Informações</h3>
+	                </eits-vbox>
+	            </content-closed>
+	            <content-opened>
+	            	abc
+	            </content-opened>
+	            </eits-paper-sheet>
+	
 </html>
