--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -26,6 +26,11 @@
 	
 		<script type="text/javascript" th:src="@{/modules/home/controllers/crianca/popup/selecionar-familia-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/crianca/crianca-controller.js}"></script>
+	
+		<!-- maskMoney -->
+		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
+		<script type="text/javascript" th:src="@{/static/js/angular.maskMoney.js}"></script>
+		
 	</head>
 		
 	<body ng-controller="HomeController">
