--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
@@ -6,7 +6,7 @@
 		class="md-sidenav-left md-whiteframe-z2">
 		
 		<md-toolbar class="md-tall" 
-			style="background-image: url('./static/images/menu-background.png'); background-repeat: round;">
+			style="background-image: url('./static/images/aldeias.jpg'); background-repeat: round;">
 <!-- 			<img src="./static/images/logo.png" width="160px" height="100px" alt="Logo"/> -->
 		</md-toolbar>
 
@@ -16,18 +16,12 @@
 			<label class="md-body-2">MENU</label>
 			
 			<md-button style="text-align: left;"
-				ng-click="toggleMenuSideNavHandler();">
-				<md-icon class="zmdi zmdi-accounts zmdi-hc-fw zmdi-hc-2x"></md-icon>
-				Usuários
-			</md-button>
-			
-			<md-divider></md-divider>
-			
-			<md-button style="text-align: left;"
 				ng-click="toggleMenuSideNavHandler('familia.list');">
 				<md-icon class="zmdi zmdi-accounts zmdi-hc-fw zmdi-hc-2x"></md-icon>
 				Família
 			</md-button>
+			
+			<md-divider></md-divider>
 			
 			<md-button style="text-align: left;"
 				ng-click="toggleMenuSideNavHandler('crianca.list');">
