--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/static/css/theme.css
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/static/css/theme.css
@@ -60,6 +60,39 @@ md-select {
 	color:black
 }
 
+/*ITEM HOME*/
+.box-list-home {
+    float: left;
+    height: 250px;
+    width: 230px;
+    margin-right: 30px;
+    background-color : white;
+    cursor: pointer;
+
+}
+
+.box-list-home:hover {
+    background-color : #F2F2F2;
+}
+
+.box-list-home  p{
+    margin-top: 20px;
+    text-align: center;
+    padding-left: 22px;
+    padding-right: 22px;
+}
+
+.box-list-home .box-home{
+    padding: 35px 10px 20px 10px;
+}
+
+.box-list-home .box-home .icon-box-home{
+    width: 80px;
+    height: 80px;
+    background-color : #ebebeb;
+    border-radius: 50%
+}
+
 .empty-grid{
 	font-size: 14px;
     min-height: 80px;
