--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
@@ -52,7 +52,7 @@
 			
 <!-- 			TOOLBAR DA TABLE -->
 
-			<div layout="column" ng-cloak class="default-frame">
+			<div layout="column" ng-cloak class="default-frame" style="margin-bottom:80px">
 				<md-toolbar style="background-color:#ffffff; color:black" layout="column">
 					<md-table-container>
 					  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
