--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -31,6 +31,9 @@
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
 		<script type="text/javascript" th:src="@{/static/js/angular.maskMoney.js}"></script>
 		
+		<!-- Moment -->
+		<script type="text/javascript" th:src="@{/static/js/moment/moment.js}"></script>
+		
 	</head>
 		
 	<body ng-controller="HomeController">
