--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
@@ -29,6 +29,12 @@
 				Crianças
 			</md-button>
 			
+			<md-button style="text-align: left;"
+				ng-click="toggleMenuSideNavHandler('plano-atendimento-familiar.list');">
+				<md-icon class="zmdi zmdi-accounts zmdi-hc-fw zmdi-hc-2x"></md-icon>
+				Plano de atendimento Familiar
+			</md-button>
+			
 			<md-divider></md-divider>
 			
 			<span flex></span>
